<resources>
    <string name="app_name">Secure Secrets</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_file">Create File</string>
    <string name="read_file">Read File</string>
    <string name="write_file">Write File</string>
    <string name="delete_file">Delete File</string>

    <string name="enter_passcode">Enter Passcode</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="reenter_passcode">Re-enter Passcode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title">Title:</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="category">Category:</string>
    <string name="enter_a_category">Enter a Category</string>
    <string name="website">Website:</string>
    <string name="enter_website">Enter Website</string>
    <string name="notes">Notes:</string>
    <string name="enter_additional_notes">Enter additional notes</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="empty_list_message">Please press on + button to add</string>
    <string name="settings">Settings</string>
</resources>
