<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--
        Title
        -->
        <TextView
            android:id="@+id/displayTitle_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayTitle_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayTitle_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="@string/enter_the_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:focusable="false"/>

        <!--
        Username
        -->
        <TextView
            android:id="@+id/displayUsername_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayTitle_editView"
            android:layout_marginTop="@dimen/fab_med_margin"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayUsername_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayUsername_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="Enter the Username "
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--
        Password
        -->
        <TextView
            android:id="@+id/displayPassword_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayUsername_editView"
            android:layout_marginTop="@dimen/fab_med_margin"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayPassword_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayPassword_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="@string/enter_the_password"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--
        Category
        -->
        <TextView
            android:id="@+id/displayCategory_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayPassword_editView"
            android:layout_marginTop="@dimen/fab_med_margin"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayCategory_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayCategory_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="@string/enter_a_category"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <!--
        Website
        -->
        <TextView
            android:id="@+id/displayWebsite_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayCategory_editView"
            android:layout_marginTop="@dimen/fab_med_margin"
            android:text="@string/website"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayWebsite_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayWebsite_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="@string/enter_website"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--
        Notes
        -->
        <TextView
            android:id="@+id/displayNotes_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayWebsite_editView"
            android:layout_marginTop="@dimen/fab_med_margin"
            android:text="@string/notes"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/displayNotes_editView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/displayNotes_label_textView"
            android:layout_marginTop="@dimen/fab_small_margin"
            android:hint="@string/enter_additional_notes"
            android:focusable="false"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--
        Additional Info
         -->
    </RelativeLayout>

</ScrollView>
